draft: convert scss to css

--- a/src/lib/buttons/clickable/style.css
+++ b/src/lib/buttons/clickable/style.css
@@ -13,8 +13,8 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
 
-  &:hover {
-    cursor: pointer;
-  }
+.cs-clickable:hover {
+  cursor: pointer;
 }
