--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -1,9 +1,34 @@
 @font-face {
   font-family: "Inter";
-  src: url("/fonts/Inter/Inter.ttf") format("truetype");
+  src: url("./fonts/inter.ttf") format("truetype");
   font-weight: 300 400 500 600 700;
   font-stretch: 75% 125%;
   font-style: oblique 0deg 12deg;
+}
+
+@font-face {
+  font-family: 'Material Symbols Rounded';
+  font-style: normal;
+  font-weight: 300;
+  src: url("./fonts/material-symbols.woff2") format('woff2');
+}
+
+.material-symbols-rounded {
+  font-family: "Material Symbols Rounded";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "liga";
 }
 
 :root {
