--- a/src/lib/buttons/clickable/style.css
+++ b/src/lib/buttons/clickable/style.css
@@ -1,4 +1,4 @@
-.cs-clickable {
+.Wui-clickable {
   align-items: var(--align, center);
   background-color: transparent;
   border: 0;
@@ -15,6 +15,6 @@
   user-select: none;
 }
 
-.cs-clickable:hover {
+.Wui-clickable:hover {
   cursor: pointer;
 }
