--- a/src/lib/display/tooltip/style.css
+++ b/src/lib/display/tooltip/style.css
@@ -1,9 +1,11 @@
-.tooltip {
-  position: relative;
-  display: contents;
+.WuiTooltip {
+  position: relative !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  width: auto !important;
 }
-
-.tooltip::after {
+.WuiTooltip::after {
   background-color: rgba(0, 0, 0, 0.6);
   color: var(--color-on-primary);
   border-radius: var(--border-radius);
@@ -15,49 +17,39 @@
   z-index: 1000;
   display: none;
 }
-
-.tooltip:hover::after {
+.WuiTooltip:hover::after {
   display: block;
 }
-
-.pos-left::after {
+.WuiTooltip-left::after {
   left: calc(100% + var(--space-xs));
   top: auto;
   bottom: auto
 }
-
-.pos-right::after {
+.WuiTooltip-right::after {
   right: calc(100% + var(--space-xs));
   top: auto;
   bottom: auto
 }
-
-.pos-top::after {
-  top: var(--top);
-  left: var(--left);
-  /* bottom: calc(100% + var(--space-xs)); */
+.WuiTooltip-top::after {
+  bottom: calc(100% + var(--space-xs));
+  margin: 0 auto;
 }
-
-.pos-bottom::after {
+.WuiTooltip-bottom::after {
   top: calc(100% + var(--space-xs));
 }
-
-.pos-top-left::after {
+.WuiTooltip-top-left::after {
   bottom: calc(100% + var(--space-xs));
   left: 0;
 }
-
-.pos-top-right::after {
+.WuiTooltip-top-right::after {
   bottom: calc(100% + var(--space-xs));
   right: 0;
 }
-
-.pos-bottom-left::after {
+.WuiTooltip-bottom-left::after {
   top: calc(100% + var(--space-xs));
   left: 0;
 }
-
-.pos-bottom-right::after {
+.WuiTooltip-bottom-right::after {
   top: calc(100% + var(--space-xs));
   right: 0;
 }
