--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -18,7 +18,6 @@
   font-weight: normal;
   font-style: normal;
   font-size: 24px;
-  line-height: 1;
   letter-spacing: normal;
   text-transform: none;
   display: inline-block;
@@ -67,7 +66,7 @@
   --color-on-primary-container: #0092CC;
 
   --color-neutral-container: #f8f9fa;
-  --color-on-neutral-container: rgba(0,0,0,0.54);
+  --color-on-neutral-container: rgba(0,0,0,1);
 
   --color-container: #f8f9fa;
   --color-on-container: #202124;
@@ -163,17 +162,23 @@ a {color: inherit;text-decoration: none;}
 .flex-row {display: flex}.flex-col {display: flex;flex-direction: column}
 .wid-100 {width: 100%}.wid-50 {width: 50%}.wid-33 {width: 33%}.wid-25 {width: 25%}
 
-.cs-badge {
+.WuiBg-primary {
   background-color: var(--color-primary);
   color: var(--color-on-primary);
-  border-radius: 10px;
-  font-size: 11px;
-  min-height: 18px;
-  line-height: 18px;
-  min-width: 12px ;
-  position: absolute;
-  padding: 0 3px;
-  bottom: calc(100% - 18px);
-  left: calc(100% - 15px);
-  white-space: nowrap;
+}
+.WuiBg-neutral {
+  background-color: var(--color-neutral-container);
+  color: var(--color-on-neutral-container);
+}
+.WuiBg-success {
+  background-color: var(--color-status-success);
+  color: var(--color-status-on-success);
+}
+.WuiBg-warning {
+  background-color: var(--color-status-warning);
+  color: var(--color-status-on-warning);
+}
+.WuiBg-danger {
+  background-color: var(--color-status-error);
+  color: var(--color-status-on-error);
 }
