--- a/src/lib/layout/flex/style.css
+++ b/src/lib/layout/flex/style.css
@@ -1,4 +1,4 @@
-.Wui-flex {
+.WuiFlex {
   display: flex !important;
   flex-direction: var(--direction, row);
   justify-content: var(--justify, flex-start);
