--- a/src/lib/buttons/button/style.css
+++ b/src/lib/buttons/button/style.css
@@ -1,47 +1,94 @@
-.Wui-base-button {
-  border: none;
+.WuiButton {
+  -webkit-box-align: center;
+  align-items: center;
+  border: 1px solid var(--WuiButton-border-color, transparent);
+  border-radius: var(--WuiButton-border-radius, var(--border-radius));
+  cursor: pointer;
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: var(--WuiButton-flex-gap, var(--space-xs));
+  height: var(--WuiButton-height, var(--button-height));
+  line-height: var(--WuiButton-height, var(--button-height));
+  -webkit-box-pack: center;
+  justify-content: center;
   outline: none;
-  border-radius: var(--border-radius);
-  height: var(--button-height);
-  width: auto;
-  padding: 0 13px;
+  padding: 0 var(--WuiButton-paddingX, var(--space-nm));
+  position: relative;
+  text-decoration: none;
   white-space: nowrap;
+  width: var(--WuiButton-width, auto);
 }
 
-.button-primary {
-  background-color: var(--color-primary);
-  color: var(--color-on-primary);
+.WuiButton-sm {
+  --WuiButton-height: var(--button-height-sm);
+  --WuiButton-paddingX: var(--space-sm);
+}
+.WuiButton-md {
+  --WuiButton-height: var(--button-height-md);
+  --WuiButton-paddingX: var(--space-nm);
+}
+.WuiButton-lg {
+  --WuiButton-height: var(--button-height-lg);
+  --WuiButton-paddingX: var(--space-md);
 }
 
-.button-primary:hover {
-  opacity: 0.9;
-  transition: opacity 0.2s ease-in-out;
+.WuiButton-primary {
+  --WuiButton-bg: var(--color-primary);
+  --WuiButton-color-on-bg: var(--color-on-primary);
+  --WuiButton-bg-soft: var(--color-selection-container);
+}
+.WuiButton-neutral {
+  --WuiButton-bg: var(--color-neutral-container);
+  --WuiButton-color-on-bg: var(--color-on-surface-inverse);
+  --WuiButton-bg-soft: var(--color-hover);
+}
+.WuiButton-success {
+  --WuiButton-bg: var(--color-status-success);
+  --WuiButton-color-on-bg: var(--color-status-on-success);
+  --WuiButton-bg-soft: var(--color-status-success-container);
+}
+.WuiButton-warning {
+  --WuiButton-bg: var(--color-status-warning);
+  --WuiButton-color-on-bg: var(--color-status-on-warning);
+  --WuiButton-bg-soft: var(--color-status-warning-container);
+}
+.WuiButton-danger {
+  --WuiButton-bg: var(--color-status-error);
+  --WuiButton-color-on-bg: var(--color-status-on-error);
+  --WuiButton-bg-soft: var(--color-status-error-container);
+  --WuiButton-color-on-bg-soft: var(--color-status-error);
 }
 
-.button-icon {
-  border-radius: 50%;
-  color: var(--color-on-surface-variant);
-  width: var(--button-height) !important;
-  height: var(--button-height) !important;
+.WuiButton-solid {
+  background-color: var(--WuiButton-bg, var(--color-primary));
+  color: var(--WuiButton-color-on-bg, var(--color-on-primary));
+}
+.WuiButton-solid:hover, .WuiButton-soft:hover {
+  filter: brightness(0.95);
+}
+.WuiButton-outline {
+  background-color: transparent;
+  color: var(--WuiButton-bg, var(--colo-primary));
+  --WuiButton-border-color: var(--WuiButton-bg, var(--color-primary));
+}
+.WuiButton-outline:hover {
+  background-color: var(--WuiButton-bg-soft, var(--color-selection-container));
+}
+.WuiButton-soft {
+  background-color: var(--WuiButton-bg-soft, var(--color-selection-container));
+  color: var(--WuiButton-bg, var(--color-on-selection-container));
+}
+.WuiButton-plain {
+  background-color: transparent;
+  color: var(--WuiButton-bg, var(--color-primary));
+}
+.WuiButton-plain:hover {
+  background-color: var(--WuiButton-bg-soft);
 }
 
-.button-icon:hover {
-  background-color: var(--color-hover);
-  color: var(--color-on-surface);
-}
-
-.button-secondary {
-  background-color: var(--color-primary-container);
-  color: var(--color-on-primary-container);
-}
-
-.button-secondary:hover {
-  background-color: var(--color-primary);
-  color: var(--color-on-primary);
-  transition: background-color 0.2s, color 0.2s;
-}
-
-.button-text:hover {
-  color: var(--color-primary);
-  opacity: 1;
+.WuiButton-only-icon {
+  --WuiButton-border-radius: 50%;
+  --WuiButton-width: var(--WuiButton-height);
+  --WuiButton-paddingX: 0;
 }
