--- a/src/lib/display/tooltip/style.css
+++ b/src/lib/display/tooltip/style.css
@@ -1,9 +1,10 @@
 .WuiTooltip {
   position: relative !important;
-  display: flex !important;
+  display: inline-flex !important;
   justify-content: center !important;
   align-items: center !important;
   width: auto !important;
+  z-index: 1000;
 }
 .WuiTooltip::after {
   background-color: rgba(0, 0, 0, 0.6);
@@ -14,7 +15,6 @@
   position: absolute;
   padding: var(--space-xs) var(--space-sm);
   white-space: nowrap;
-  z-index: 1000;
   display: none;
 }
 .WuiTooltip:hover::after {
