--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -1,7 +1,5 @@
-.header {
-  width: 100px;
-  height: 100px;
-  background-color: green;
+.col {
+  padding: 50px 10%
 }
 
 .menu {
@@ -9,6 +7,10 @@
   height: 500px;
 }
 
-.input, .button {
+.input {
   width: 300px;
+}
+
+.button {
+  width: 150px;
 }
