--- a/src/lib/buttons/button/style.css
+++ b/src/lib/buttons/button/style.css
@@ -7,7 +7,8 @@
   display: inline-flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  gap: var(--WuiButton-flex-gap, var(--space-xs));
+  font-weight: 500;
+  gap: var(--WuiButton-flex-gap, var(--space-sm));
   height: var(--WuiButton-height, var(--button-height));
   line-height: var(--WuiButton-height, var(--button-height));
   -webkit-box-pack: center;
@@ -18,6 +19,10 @@
   text-decoration: none;
   white-space: nowrap;
   width: var(--WuiButton-width, auto);
+}
+.WuiButton:disabled {
+  pointer-events: none;
+  cursor: default;
 }
 
 .WuiButton-sm {
@@ -40,7 +45,7 @@
 }
 .WuiButton-neutral {
   --WuiButton-bg: var(--color-neutral-container);
-  --WuiButton-color-on-bg: var(--color-on-surface-inverse);
+  --WuiButton-color-on-bg: var(--color-on-neutral-container);
   --WuiButton-bg-soft: var(--color-hover);
 }
 .WuiButton-success {
@@ -59,20 +64,29 @@
   --WuiButton-bg-soft: var(--color-status-error-container);
   --WuiButton-color-on-bg-soft: var(--color-status-error);
 }
+.WuiButton-primary:disabled,
+.WuiButton-neutral:disabled,
+.WuiButton-success:disabled,
+.WuiButton-warning:disabled {
+  --WuiButton-bg: #9FA6AD;
+  --WuiButton-color-on-bg: var(--color-on-surface-inverse);
+  --WuiButton-bg-soft: var(--color-hover);
+  --WuiButton-color-on-bg-soft: var(--color-on-surface-inverse);
+}
 
 .WuiButton-solid {
   background-color: var(--WuiButton-bg, var(--color-primary));
   color: var(--WuiButton-color-on-bg, var(--color-on-primary));
 }
-.WuiButton-solid:hover, .WuiButton-soft:hover {
+.WuiButton-solid:not(:disabled):hover, .WuiButton-soft:not(:disabled):hover {
   filter: brightness(0.95);
 }
 .WuiButton-outline {
   background-color: transparent;
-  color: var(--WuiButton-bg, var(--colo-primary));
+  color: var(--WuiButton-bg, var(--color-primary));
   --WuiButton-border-color: var(--WuiButton-bg, var(--color-primary));
 }
-.WuiButton-outline:hover {
+.WuiButton-outline:not(:disabled):hover {
   background-color: var(--WuiButton-bg-soft, var(--color-selection-container));
 }
 .WuiButton-soft {
@@ -83,7 +97,7 @@
   background-color: transparent;
   color: var(--WuiButton-bg, var(--color-primary));
 }
-.WuiButton-plain:hover {
+.WuiButton-plain:not(:disabled):hover {
   background-color: var(--WuiButton-bg-soft);
 }
 
@@ -91,4 +105,24 @@
   --WuiButton-border-radius: 50%;
   --WuiButton-width: var(--WuiButton-height);
   --WuiButton-paddingX: 0;
+}
+
+.WuiButton-loader {
+  border: 3px solid var(--WuiButton-bg);
+  border-radius: 50%;
+  border-top-color: var(--color-primary);
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 0.8s linear infinite; /* Safari */
+  animation: spin 0.8s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
