--- a/src/lib/navigation/tabs/style.css
+++ b/src/lib/navigation/tabs/style.css
@@ -1,7 +1,7 @@
 .WuiTabs {
   display: flex;
   flex-direction: row;
-  gap: var(--space-sm);
+  gap: var(--space-nm);
   margin-bottom: var(--WuiTab-marginBottom, var(--space-md));
   width: auto;
 }
