--- a/src/lib/display/avatar/style.css
+++ b/src/lib/display/avatar/style.css
@@ -1,27 +1,34 @@
 .WuiAvatar {
+  --WuiAvatar-size: var(--button-height-md, --button-height-md);
+  --WuiAvatar-bg: var(--color-primary);
+  --WuiAvatar-color: var(--color-on-primary);
+  --WuiAvatar-outline-color: transparent;
+  background-color: var(--WuiAvatar-bg);
+  border: 1px solid var(--WuiAvatar-outline-color);
   border-radius: 50%;
-  flex: 0 0 auto;
+  color: var(--WuiAvatar-color);
+  flex-shrink: 0;
+  flex-grow: 0;
+  height: var(--WuiAvatar-size) !important;
+  width: var(--WuiAvatar-size) !important;
 }
 
 .WuiAvatar-solid {
-  background-color: var(--color-primary);
-  color: var(--color-on-primary);
+  --WuiAvatar-bg: var(--color-primary);
+  --WuiAvatar-color: var(--color-on-primary);
 }
-
 .WuiAvatar-outline {
-  background-color: var(--color-surface);
-  color: var(--color-on-surface);
-  border: 1px solid var(--color-outline) !important;
+  --WuiAvatar-bg: var(--color-surface);
+  --WuiAvatar-color: var(--color-on-surface);
+  --WuiAvatar-outline-color: var(--color-outline);
 }
-
 .WuiAvatar-soft {
-  background-color: var(--color-selection-container);
-  color: var(--color-on-selection-container);
+  --WuiAvatar-bg: var(--color-selection-container);
+  --WuiAvatar-color: var(--color-on-selection-container);
 }
-
 .WuiAvatar-plain {
-  background-color: var(--color-surface);
-  color: var(--color-on-surface);
+  --WuiAvatar-bg: var(--color-surface);
+  --WuiAvatar-color: var(--color-on-surface);
 }
 
 .WuiAvatar-alt {
@@ -29,17 +36,14 @@
 }
 
 .WuiAvatar-sm {
-  height: 30px;
-  width: 30px;
+  --WuiAvatar-size: var(--button-height-sm);
   font-size: 11px;
 }
 .WuiAvatar-md {
-  height: var(--button-height);
-  width: var(--button-height);
+  --WuiAvatar-size: var(--button-height-md);
 }
 .WuiAvatar-lg {
-  height: 60px;
-  width: 60px;
+  --WuiAvatar-size: var(--button-height-lg);
   font-size: 18px;
 }
 
