--- a/src/lib/display/tooltip/style.css
+++ b/src/lib/display/tooltip/style.css
@@ -4,14 +4,14 @@
   justify-content: center !important;
   align-items: center !important;
   width: auto !important;
-  z-index: 1000;
+  z-index: 10000;
 }
 .WuiTooltip::after {
   background-color: rgba(0, 0, 0, 0.6);
   color: var(--color-on-primary);
   border-radius: var(--border-radius);
   content: attr(data-tooltip-title);
-  font-size: 12px;
+  font-size: 0.75rem;
   position: absolute;
   padding: var(--space-xs) var(--space-sm);
   white-space: nowrap;
