--- a/src/lib/inputs/base/style.css
+++ b/src/lib/inputs/base/style.css
@@ -41,7 +41,7 @@
 }
 
 .WuiInput-errored {
-  --input-border-color: var(--color-status-error);
+  --input-border-color: var(--color-status-error) !important;
 }
 
 .WuiInput-prefixed {
