--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -17,7 +17,7 @@
   font-family: "Material Symbols Rounded";
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;
+  font-size: 1.5rem;
   letter-spacing: normal;
   text-transform: none;
   display: inline-block;
@@ -101,19 +101,19 @@
   --color-status-on-error: #fff;
   --color-status-error-container: #fbe9e7;
 
-  --space-xs: 03px;
-  --space-sm: 05px;
-  --space-nm: 08px;
-  --space-md: 13px;
-  --space-lg: 21px;
+  --space-xs: 0.1875rem;
+  --space-sm: 0.3125rem;
+  --space-nm: 0.5rem;
+  --space-md: 0.8125rem;
+  --space-lg: 1.3125rem;
 
-  --button-height-sm: 34px;
-  --button-height-md: 40px;
-  --button-height-lg: 48px;
+  --button-height-sm: 2.125rem;
+  --button-height-md: 2.5rem;
+  --button-height-lg: 3rem;
 
-  --input-height-sm: 34px;
-  --input-height-md: 40px;
-  --input-height-lg: 48px;
+  --input-height-sm: 2.125rem;
+  --input-height-md: 2.5rem;
+  --input-height-lg: 3rem;
 
   --border-radius: 4px;
 
@@ -141,18 +141,18 @@ body {
   margin: 0 !important;
 }
 
-h1,h2,h3,h4,h5,h6 {margin-block-end: 0;margin-block-start: 0;}
-h1 {font-size: 32px;line-height: 40px;font-weight: 400}
-h2 {font-size: 28px;line-height: 36px;font-weight: 400}
-h3 {font-size: 24px;line-height: 32px;font-weight: 400}
-h4 {font-size: 20px;line-height: 28px;font-weight: 400}
-h5 {font-size: 18px;line-height: 24px;font-weight: 400}
-h6 {font-size: 16px;line-height: 22px;font-weight: 400}
+h1,h2,h3,h4,h5,h6 {margin-block-end: 0;margin-block-start: 0}
+h1 {font-size: 2rem;   line-height: 2.5rem;  font-weight: 400}
+h2 {font-size: 1.75rem;line-height: 2.25rem; font-weight: 400}
+h3 {font-size: 1.5rem; line-height: 2rem;    font-weight: 400}
+h4 {font-size: 1.25rem;line-height: 1.75rem; font-weight: 400}
+h5 {font-size: 1.125px;line-height: 1.5rem;  font-weight: 400}
+h6 {font-size: 1rem;   line-height: 1.375rem;font-weight: 400}
 
 body {
   color: var(--color-on-surface);
   background-color: var(--color-surface);
-  font-size: 13px;
+  font-size: 0.875rem;
 }
 
 a {color: inherit;text-decoration: none;}
